--- a/PHP/Makefile
+++ b/PHP/Makefile
@@ -9,10 +9,13 @@
 
 all: copy
 
-PROJ=PHPPractice
+PROJ=Redis_PHP_Practice
 
 copy: 
 	echo ${USER}
 	mkdir -p /srv/www/htdocs/php/${USER}/${PROJ}
 	chmod o+rx -R /srv/www/htdocs/php/${USER}/${PROJ}
 	rsync -ahv * /srv/www/htdocs/php/${USER}/${PROJ}
+
+install:
+	composer install
